--- a/views/Resources/CanHelp.css
+++ b/views/Resources/CanHelp.css
@@ -1,39 +1,3 @@
-body {
-    font-family: 'Arial', sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f5f5f5;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    height: 100vh;
-}
-
-header {
-    width: 100%;
-    text-align: center;
-    background: #89bbf5;
-}
-
-.header-btn {
-    background-color: #89bbf5;
-    border: none;
-    width: 100%;
-    height: 100%;
-    padding: 20px 0;
-    border-radius: 0;
-    cursor: pointer;
-    font-family: 'Arial', sans-serif;
-    font-size: 16px;
-    color: #000;
-    font-weight: bold;
-  }
-  
-  .header-btn:hover {
-    background-color: #89bbf5; 
-  }
-
 .needs-list-container {
     width: 90%;
     max-width: 500px;
@@ -49,22 +13,16 @@ header {
     border: 1px solid #d7d7d7;
 }
 
-input[type=number] {
+input[type="number"] {
     appearance: none;
     border: none;
     outline: none;
     border-bottom: 2px solid #fab855;
-    border-radius: 0.2em 0.2em 0 0;
     padding: 10px;
-    color: #000;
 }
 
-
-.need-details p {
+.need-details p, .need-details span {
     margin: 10px 0;
-}
-
-.need-details span {
     font-weight: bold;
 }
 
@@ -84,10 +42,9 @@ input[type=number] {
     position: absolute;
 }
 
-.offer-button {
+.offer-button, .submit-offer {
     background-color: #fab855;
     color: #000;
-    border: none;
     padding: 10px;
     border-radius: 5px;
     cursor: pointer;
@@ -96,44 +53,5 @@ input[type=number] {
 }
 
 .submit-offer {
-    background-color: #fab855;
-    color: #000;
-    border: none;
-    padding: 10px;
-    border-radius: 5px;
-    cursor: pointer;
     width: 53%;
 }
-
-#navigation-bar-container {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    background-color: #fff;
-    box-shadow: 0 -2px 5px rgba(0,0,0,0.1);
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    padding: 10px 0;
-    box-sizing: border-box;
-    z-index: 1000;
-  }
-  
-  .nav-item {
-    text-decoration: none;
-    color: black;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  .nav-icon {
-    font-size: 24px;
-  }
-  
-  .nav-label {
-    font-size: 12px;
-    margin-top: 5px;
-  }
-  
