--- a/views/Resources/need-help.html
+++ b/views/Resources/need-help.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Need Help</title>
   <link rel="stylesheet" href="NeedHelp.css">
+  <link rel="stylesheet" href="sharedElements.css">
 </head>
 <body>
   <header>
