--- a/views/Resources/can-help.html
+++ b/views/Resources/can-help.html
@@ -28,7 +28,7 @@
                 <button class="offer-button" onclick="toggleOfferInput(this)" style="border: none;">I can offer</button>
                 <div class="offer-section" style="display: none; margin-top: 25px">
                     <input type="number" class="offer-quantity" min="1" placeholder="Quantity" />
-                    <button class="submit-offer" onclick="offerResource(this)">Submit Offer</button>
+                    <button class="submit-offer" onclick="offerResource(this)" style="border: none;">Submit Offer</button>
                 </div>
                 <p class="quantity-error" style="color: red; display: none;"></p>
             </div>
