--- a/views/profile.html
+++ b/views/profile.html
@@ -137,7 +137,7 @@
     </form>
     <script src="/socket.io/socket.io.js"></script>
     <script>
-      const socket = io('http://localhost:3000', {
+      const socket = io('https://s24esnb2.onrender.com', {
         query: {
           token: localStorage.getItem('token'),
         },
