--- a/views/profile.html
+++ b/views/profile.html
@@ -144,12 +144,35 @@
       })
       document.querySelector('button[type="submit"]').style.display = 'none'
       let bannedUsernames = []
-      let users = JSON.parse(localStorage.getItem('users'))
+      let users = await fetchUsers();
       let username
       let newUsername
       let password
       let privilege
       let activeness
+
+      async function fetchUsers() {
+        let url = '/users';
+      
+        // Return the promise chain here
+        return fetch(url)
+            .then(response => {
+                if (!response.ok) {
+                    throw new Error('Network response was not ok');
+                }
+                return response.json();
+            })
+            .then(data => {
+                
+                return data.data.users;  
+                
+            })
+            .catch(error => {
+                console.error('There has been a problem with your users fetch operation:', error);
+                // It's important to re-throw the error if you want the caller to be able to handle it
+                throw error;
+            });
+      }
 
       async function fetchBannedUsernames() {
         try {
