--- a/views/chatroom.html
+++ b/views/chatroom.html
@@ -57,7 +57,7 @@
     <script src="ChatScreen.js"></script>
     <script>
       document.addEventListener('DOMContentLoaded', function () {
-        const socket = io('https://s24esnb2.onrender.com/', {
+        const socket = io('http://localhost:3000//', {
           query: {
             token: localStorage.getItem('token'),
           },
