--- a/views/profile.html
+++ b/views/profile.html
@@ -136,9 +136,7 @@
       </div>
     </form>
     <script src="/socket.io/socket.io.js"></script>
+    <script src="profile.js"></script>
 
-    <script src="profile.js">
-
-    
-  </body>
+ </body>
 </html>
